--- a/css/main.css
+++ b/css/main.css
@@ -77,3 +77,9 @@ td:hover{
 .miss {
   background-color: rgba(128,128,128,0.7)
 }
+.arrow {
+  content: url('../images/arrow.png');
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+}
