--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,12 @@
 * {
   font-family: 'Indie Flower', cursive;
   background-color: #fff;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .container {
   width: 640px;
