--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ td:hover{
 }
 
 .placedCat {
-  background-image: url('../images/cat-face.png');
+  background-image: url('../images/cat-face2.png');
   background-size: cover;
 }
 .hit {
